name:          roles
category:      Data
version:       0.3.0.0
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett, Matt Noonan
maintainer:    Matt Noonan <matt.noonan@gmail.com>
stability:     provisional
homepage:      http://github.com/matt-noonan/roles/
bug-reports:   http://github.com/matt-noonan/roles/issues
copyright:     Copyright (C) 2017 Matt Noonan, (C) 2014 Edward A. Kmett
synopsis:      Composable class-based roles
description:   Composable class-based roles
build-type:    Simple
extra-source-files:
  CHANGELOG.markdown
  README.md

source-repository head
  type: git
  location: git://github.com/matt-noonan/roles.git

library
  build-depends:    base >= 4.10 && < 5
                  , containers

  exposed-modules:  Data.Roles

  ghc-options: -Wall -Wcompat -fwarn-tabs
  hs-source-dirs: src
